crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__monte-carlo_endings_200x55.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                                                                                                      
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                                                                                          full.toml ● 
┴──────────┴┴────────┴┴─────────┴╯       ╰┴──────┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭ Tools ────────────╮╭ Assumptions ───────────────────╮╭ Markets · money lasts in 99.7% of 1,000 ──────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Roth Conversions ││                                ││  Markets         Ends with  Short in                                                                                                          │
│  SSA Benefits     ││▌ Money lasts  99.7% of 1,000   ││  As planned          2.09M     never                                                                                                          │
│▏ Monte Carlo      ││  Success      Never short      ││▏ 90th percentile     3.41M     never                                                                                                          │
│  Historical       ││  Draw from    The assumptions  ││  75th percentile     2.74M     never                                                                                                          │
│                   ││  Trials       1,000 · seed 42  ││  50th percentile     2.06M     never                                                                                                          │
│                   ││  Stocks       6% ± 16%         ││  25th percentile     1.41M     never                                                                                                          │
│                   ││  Bonds        4% ± 6%          ││  10th percentile      859k     never                                                                                                          │
│                   ││  Cash         2.5% ± 1%        ││  Worst                   0 2063 (88)                                                                                                          │
│                   ││  Inflation    2.5% ± 1.5%      │╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
│                   ││  No mix       cash, brokerage, │╭ Ends With · 1,000 runs ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                   ││                                ││short       3                                                                                                                                  │
│                   ││                                ││<1.00M      131████████████████████████████████                                                                                                │
│                   ││                                ││1.00M–2.00M 347███████████████████████████████████████████████████████████████████████████████████████████                                     │
│                   ││                                ││2.00M–4.00M 480████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│
│                   ││                                ││4.00M–8.00M 39████████                                                                                                                         │
│                   ││                                ││8.00M+      0                                                                                                                                  │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   ││                                ││                                                                                                                                               │
│                   │╰────────────────────────────────╯╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╰───────────────────╯Random markets from the assumptions or from history; the same seed draws the same markets. Today's dollars.                                                                        
 ↑↓ assumption  ⏎ edit  ⇥ pane  v view  ctrl-s save  r reload  q quit  ctrl-↓ tab  n dollars                                                                                         : commands  ? help
