crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__new_plan_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                 no document  
┴──────────┴┴────────┴┴─────────┴┴───────┴╯      ╰──────────────────────────────────────────────────────────────────────────────
                                                                                                                                
                                                                                                                                
                              ╭ New plan ───────────────────────────────────────────────────────╮                               
                              │Start from                  [ My own answers ▾ ]                 │                               
                              │Filing status               [ None ▾ ]                           │                               
                              │Life stage                  [ None ▾ ]                           │                               
                              │Your name                   [                                  ] │                               
                              │Birth year                  [                                  ] │                               
                              │Retirement age              [                                  ] │                               
                              │Working since               [                                  ] │                               
                              │Salary                      [                                  ] │                               
                              │Social Security             [                                  ] │                               
                              │Claim age                   [                                  ] │                               
                              │Partner's name              [                                  ] │                               
                              │Partner's birth year        [                                  ] │                               
                              │Partner's retirement age    [                                  ] │                               
                              │Partner's working since     [                                  ] │                               
                              │Partner's salary            [                                  ] │                               
                              │Partner's Social Security   [                                  ] │                               
                              │Partner's claim age         [                                  ] │                               
                              │─────────────────────────────────────────────────────────────────│                               
                              │                                                                 │                               
                              │                                                                 │                               
                              │                                                                 │                               
                              │─────────────────────────────────────────────────────────────────│                               
                              │                                                       [ Create ]│                               
                              ╰─────────────────────────────────────────────────────────────────╯                               
                                                                                                                                
 ⏎ edit  q quit                                                                                              : commands  ? help
