crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__open_picker_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  plan.toml ● 
╯          ╰┴────────┴┴─────────┴┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────
 Money lasts                     Success                         Ends with                       Lifetime taxes                 
 Never short                     100% of 20                      $2.09M                          $697k                          
╭ Milestones ──────────────────────────────────────────────────╮╭ Needs attention ─────────────────────────────────────────────╮
│▏ 2032 inheritance arrives                                   ▲││▏ Fails from a 1968 start · 23 of 155 fail                    │
│  2037 retire                                                █││                                                              │
│  2037 db-pension starts                                     ║││                                                              │
│  2037 401k-deferral ends                                    ▼││                                                              │
╰──────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────╯
╭ Balances by tax treatment · to╭ Open ────────────────────────────────────────────────────────╮that year's dollars ───────────╮
│2.20M│┊            ⢀⣀⣀⣀⣀       │>                                                             │0 to fid-401k ($24,000 yours,  │
│     │┊         ⢀⡠⠊⠁▓┊▓▓⠉⠑⠒⠒⠒⠒⠒│  ../                                                         │)                              │
│     │┊       ⡔⠊⠁▓▓▓▓┊▓▓▓▓▓▓▓▓▒│▌ broken.toml                                         invalid │ to hsa                        │
│     │┊   ⢀⡠⠔⠊▓▓▓▓▓▓▓┊▓▓▒▒▒▒▒▒▒│  plan.toml                                              plan │$9,020 in cash                 │
│     │┊⣀⠤⠒⠁▓▓▓▓▓▓▓▓▒▒┊░░░░░░░░░│  variant.toml                                       scenario │                               │
│     │⠉▓▓▓▓▓▓▓▓▒▒░░░░┊░░░░░░░░░│                                                              │                               │
│     │┊▓▓▓▒▒░░░░░░░░░┊░░░░░░░░░│                                                              │                               │
│     │┊░░░░░░░░░░░░░░┊░░░░░░░░░│                                                              │                               │
│     │┊░░░░░░░░░░░░██┊█████████│                                                              │                               │
│0    │┊██████████████┊█████████│                                                              │                               │
│     └─────────────────────────│                                                              │                               │
│  2026          retire 2037    ╰──────────────────────────────────────────────────────────────╯                               │
│██ HSA  ░░ pre-tax  ▒▒ Roth  ▓▓ taxable                                   ││                                                  │
╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯
╭ Could do better ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│▏ jordan: convert to 22%, ends +$56k                                                                                          │
│                                                                                                                              │
│                                                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ↑↓ move  ⏎ pick  ⇥ complete  ← parent  esc close
